# not.used

./: .gitignore  Dockerfile  README.md  TESTING.md  analysis_options.yaml  build.gradle.kts  deploy.sh  docker-compose.yaml  fiap.txt  local.properties  package.json  pom.xml  pubspec.yaml  run.sh  settings.gradle.kts
AluraBooksExpress/: app.js  books.json  package.json
Amphibians-App/: build.gradle.kts  settings.gradle.kts
COMANDOS-DML-MANIPULA-O-DE-DADOS-COM-MYSQL/: Teste_002.sql  Teste_003.sql  Teste_004.sql
CardApiCoilXMLExample/: README.md
CardApiGlideXMLExample/: README.md
CardApiPicassoXMLExample/: settings.gradle.kts
CityApp/: settings.gradle.kts
Consultas-SQL---AVAN-ANDO-NO-SQL-COM-MYSQL/: Teste_001.sql  Teste_002.sql  Teste_003.sql  Teste_004.sql  Teste_006.sql  Teste_012.sql  Teste_013.sql  Teste_014.sql  Teste_019.sql  Teste_020.sql  Teste_021.sql
CrackingTheCodingInterview/: Cap1Problem1.kt  Cap1Problem4.kt  Cap1Problem5.kt  Cap1Problem9.kt  Cap2Problem3.kt  Cap2Problem4.kt  Cap2Problem5.kt
Cristianismo Pratico/: Contabilidade do Reino.md  Pessoas.md
DS-Prof.-Felipe/: Explorando_o_Visualizações_com_o_Seaborn.ipynb
Escola de Profetas/: Dia 3 - 1.md  Dia 3 - 2.md
FullCycleDocker/: docker-compose.laravel.yaml  docker-compose.yaml  package-lock.json
Grokking_Algorithms/: Dijkstras_Algorithms.kt  SelectionSort.kt
Ideias de Negócios/: Industrial.md  Videos.md
LemonadeApp/: README.md
NasaAppCompose/: build.gradle.kts
SQL-COM-MYSQL---MANIPULE-E-CONSULTE-DADOS/: Teste_001.sql  Teste_007.sql  (+11 more)
Testes_JUN/Experimento_1/: pyproject.toml
(+1412 files in other folders)
