[tool.poetry]                                   #setup.py
name = "project"
version = "0.1.0"
description = ""
authors = ["Marcus <mens.eai20@uea.edu.br>"]

[tool.poetry.dependencies]                     #requirements.txt
python = "^3.10"

[tool.poetry.dev-dependencies]                 #requirements-dev.txt
pytest = "^5.2"

[build-system]                                 #setuptools
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
